--- a/style.css
+++ b/style.css
@@ -23,4 +23,11 @@ ul {
 
 button {
   background-color: lightblue;
+  position: absolute;
+  top:50%;
+  color: #fff; 
+  border-radius:10px; 
+  padding:15px;
+  min-height:30px; 
+  min-width: 120px;
 }
