added button below textarea and class names to differentiate between buttons

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ ul {
  list-style: none;  
 }
 
-button {
+button.clickMeButton {
   background-color: lightblue;
   position: absolute;
   top:50%;
