--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   text-align: center;
   justify-content: space-evenly;
-  background: grey
+  background: grey;
 }
 
 p.link {
@@ -25,12 +25,10 @@ ul {
 button.clickMeButton {
   background-color: lightblue;
   position: absolute;
-  top:50%;
+  top:20%;
   color: #fff; 
   border-radius:10px; 
   padding:15px;
-  min-height:30px; 
-  min-width: 120px;
 }
 
 button.submitButton {
